# 2024G-RT-main

./: README.md
2024G-RT-main/: README.md
2024G-RT-main/Games101/src/: rasterizer1.rs  rasterizer2.rs  rasterizer3.rs  task1.rs  task2.rs  task3.rs  texture.rs  triangle.rs  utils.rs
2024G-RT-main/RayTracer/: Cargo.toml
2024G-RT-main/RayTracer/src/: AABB.rs  bvh.rs  camera.rs  color.rs  constant_medium.rs  hittable.rs  hittable_list.rs  image_.rs  interval.rs  main.rs  material.rs  mtl.rs  obj.rs  obj_read.rs  perlin.rs  quad.rs  ray.rs  sphere.rs  texture.rs  triangle.rs  vec3.rs
2024G-RT-main/gpu/src/: main.rs  render.rs  shaders.wgsl
