[package]
name = "ray_tracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.2"
indicatif = "0.16.2" # progress bar
rand= {version = "0.8.5", features = ["std_rng"] }
num-traits = "0.2.19"
log = "0.4.22"
rayon = "1.10.0"
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
debug = false
target-cpu = "native"